--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -60,7 +60,12 @@ jobs:
     - name: Get dependencies
       run: make deps
 
+    - name: Build (debug)
+      if: github.ref_type != 'tag'
+      run: MAKE_debugsymbols=true make -j2 github-build
+    
     - name: Build
+      if: github.ref_type == 'tag'
       run: make -j2 github-build
 
     - name: Check macOS build target
