--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -144,7 +144,12 @@ jobs:
     - name: Set up zig
       uses: mlugg/setup-zig@v2
 
+    - name: Build (debug)
+      if: github.ref_type != 'tag'
+      run: MAKE_debugsymbols=true make -j2 github-build
+
     - name: Build
+      if: github.ref_type == 'tag'
       run: make -j2 github-build
 
     - name: Cache build output
