--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -253,6 +253,74 @@ jobs:
         path: ./coverage.out
         if-no-files-found: error
 
+  launcher_table_test:
+    name: Launcher table performance test
+    needs:
+      - build
+      - build_linux
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os:
+          - ubuntu-22.04
+          - macos-13
+          - windows-latest
+    steps:
+    - name: Check out code
+      id: checkout
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0 # need a full checkout for `git describe`
+
+    - name: Setup Go
+      uses: actions/setup-go@v6
+      with:
+        go-version-file: './go.mod'
+        check-latest: true
+        cache: false
+
+    - name: cache restore - build
+      uses: actions/cache/restore@v4
+      with:
+        path: ./build
+        key: ${{ runner.os }}-${{ github.run_id }}
+        enableCrossOsArchive: true
+
+    - id: go-cache-paths
+      shell: bash
+      run: |
+        echo "go-build=$(go env GOCACHE)" >> "$GITHUB_OUTPUT"
+        echo "go-mod=$(go env GOMODCACHE)" >> "$GITHUB_OUTPUT"
+
+    - name: cache restore - GOCACHE
+      uses: actions/cache/restore@v4
+      with:
+        path: ${{ steps.go-cache-paths.outputs.go-build }}
+        key: ${{ runner.os }}-go-build-${{ hashFiles('**/go.sum') }}
+        enableCrossOsArchive: true
+
+    - name: cache restore - GOMODCACHE
+      uses: actions/cache/restore@v4
+      with:
+        path: ${{ steps.go-cache-paths.outputs.go-mod }}
+        key: ${{ runner.os }}-go-mod-${{ hashFiles('**/go.sum') }}
+        enableCrossOsArchive: true
+
+    - name: Test
+      run: make test-bench-tables > benchmark.txt
+
+    - name: Display results
+      shell: bash
+      run: cat ./benchmark.txt
+
+    - name: Upload benchmark results
+      uses: actions/upload-artifact@v4
+      with:
+        name: ${{ runner.os }}-benchmark.txt
+        path: ./benchmark.txt
+        if-no-files-found: error
+
   exec_testing:
     name: Exec Test
     runs-on: ${{ matrix.os }}
