Get main-run-id on Windows

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -316,6 +316,7 @@ jobs:
 
     - name: Get run ID for last launcher table performance test on main
       id: main-run-id
+      shell: bash
       env:
         GH_TOKEN: ${{ github.token }}
       run: |
