--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -338,9 +338,26 @@ jobs:
 
     - name: Compare performance against main
       if: github.ref != 'refs/heads/main'
+      shell: bash
       run: |
-        benchstat main/benchmark.txt ./benchmark.txt
-    
+        benchstat main/benchmark.txt ./benchmark.txt > benchstat.txt
+        cat ./benchstat.txt
+
+        # We want to check for performance regressions.
+        # The regex matches lines that look like:
+        # AppIcons-3         5.606m ± 10%   10012.759m ± 0%  +178505.57% (p=0.000 n=10)
+        # Format is: <Function name> <benchmark measurement from main> ± <confidence interval> <benchmark measurement from PR> ± <confidence interval> +<percent change versus main>
+        # We're capturing the percent change against main, whenever it is a performance regression (positive delta).
+        # When it's a negative change (e.g. -178505.57%), that's a performance improvement.
+        # When there's no difference, benchstat outputs a ~ instead.
+        REGRESSIONS=$(grep -E '^.+-\d+\s+(?:\d+\.?\d*[a-zA-Z]*\s±\s\d+%\s+){2}(\+\d+\.?\d*%)' ./benchstat.txt)
+        if [ ! -z "$REGRESSIONS" ]
+        then
+          echo "Performance regressions found:"
+          echo "$REGRESSIONS"
+          exit 1
+        fi
+
     - name: Save benchmark results for main
       if: github.ref == 'refs/heads/main'
       uses: actions/upload-artifact@v4
