--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -351,7 +351,7 @@ jobs:
         # When it's a negative change (e.g. -178505.57%), that's a performance improvement.
         # When there's no difference, benchstat outputs a ~ instead.
         REGRESSIONS=$(grep -E '^.+-\d+\s+(?:\d+\.?\d*[a-zA-Z]*\s±\s\d+%\s+){2}(\+\d+\.?\d*%)' ./benchstat.txt)
-        if [ ! -z "$REGRESSIONS" ]
+        if [ -n "$REGRESSIONS" ]
         then
           echo "Performance regressions found:"
           echo "$REGRESSIONS"
