--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -350,7 +350,9 @@ jobs:
         # We're capturing the percent change against main, whenever it is a performance regression (positive delta).
         # When it's a negative change (e.g. -178505.57%), that's a performance improvement.
         # When there's no difference, benchstat outputs a ~ instead.
+        grep -E '^.+-\d+\s+(?:\d+\.?\d*[a-zA-Z]*\s±\s\d+%\s+){2}(\+\d+\.?\d*%)' ./benchstat.txt
         REGRESSIONS=$(grep -E '^.+-\d+\s+(?:\d+\.?\d*[a-zA-Z]*\s±\s\d+%\s+){2}(\+\d+\.?\d*%)' ./benchstat.txt)
+        echo "regressions: $REGRESSIONS"
         if [ -n "$REGRESSIONS" ]
         then
           echo "Performance regressions found:"
