Ignore ST1005 because some tables return non-standard error strings

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -108,6 +108,9 @@ linters:
       - linters:
           - staticcheck
         text: 'ST1003:'
+      - linters:
+          - staticcheck
+        text: 'ST1005:'
     paths:
       - test-cmds
       - third_party$
